# rstutils

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/skills/add-token-workflow/: SKILL.md
LICENSES/: MIT.md
crates/rstu/: Cargo.toml
crates/rstu/src/: main.rs
crates/rstu/tests/: cli.rs
crates/rstu_ast/: Cargo.toml
crates/rstu_ast/src/: element_kind.rs  elements.rs  helpers.rs  lib.rs  main.rs  tests.rs
crates/rstu_ast/tests/data/: document_root.json  document_root.yaml  invalid_list_child.json  invalid_list_child.yaml  invalid_meta_text.json  invalid_meta_text.yaml  invalid_non_inline_child.json  invalid_non_inline_child.yaml  section_marker_caret_document.json  section_marker_caret_document.yaml  section_marker_hash_document.json  section_marker_hash_document.yaml  section_nested_hash_tilde.json  section_nested_hash_tilde.yaml  section_single_hash.json  (+5 more)
crates/rstu_parser/: Cargo.toml  token.rs
crates/rstu_parser/docs/: prompt.md
crates/rstu_parser/src/: doctree.rs  lexer.rs  lib.rs  parser.rs  prompt_temp.txt  token.rs
crates/rstu_parser/tests/: test_doctree_parser.rs  test_lexer.rs  test_parser.rs  test_parser_nok.rs  test_parser_ok.rs  test_parser_section.rs  test_section_header_scan.rs
docs/: architecture.md  good_practice.md  index.md  requirements.md  restructuredtext.rst  rst_deviations.md
prototype/: README.md  pyproject.toml  requirements.txt
prototype/.devcontainer/: devcontainer.json
prototype/docs/: architecture.md  index.md
scripts/: add_copyright.py
(+18 files in other folders)
